<resources>
    <string name="app_name">我爱学习</string>

    <string name="default_content_description">dcd</string>
    <string name="login">登录</string>
    <string name="register_new">注册账号</string>
    <string name="register">注册</string>
    <string name="login_ing">正在登录</string>
    <string name="login_ed">登录成功</string>
    <string name="login_auth">正在获取用户信息</string>
    <string name="remember_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="loading">正在加载</string>
    <string name="picture">图片</string>
    <string name="emotion">表情</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="media_err">媒体错误，无法连接照相机或录音机</string>
    <string name="jpush">推送</string>
    <string name="jpush_stop">停止推送</string>
    <string name="jpush_resume">恢复推送</string>
    <string name="upload">上传作品</string>
    <string name="my_upload">我的作品</string>
    <string name="message">消息</string>
    <string name="joined">我参与的</string>
    <string name="settings">设置</string>
    <string name="broadcast">公告</string>
    <string name="load_more">加载更多</string>
    <string name="no_more">没有更多数据了</string>
    <string name="replay">回复</string>
    <string name="vote">投票</string>
    <string name="str_default">默认</string>
    <string name="chose_category_">选择栏目：</string>
    <string name="chose_district_">选择区域：</string>
    <string name="chose_school_">选择学校：</string>
    <string name="all">全部</string>
    <string name="_vote">票</string>
    <string name="checking">待审核</string>
    <string name="checked">已通过</string>
    <string name="unchecked">未通过</string>
    <string name="expert_one">专家一</string>
    <string name="expert_two">专家二</string>
    <string name="inputScoreToast">分数不能大于100</string>
    <string name="replied">评论了您的</string>
    <string name="to_your">对您的</string>
    <string name="praised">点了赞</string>
    <string name="praise_add">赞+1</string>
    <string name="voted">投了票</string>
    <string name="vote_add">投票+1</string>
    <string name="had_voted">你已经投过一票了</string>
    <string name="had_praised">你已经赞过了</string>
    <string name="change_head">点击修改头像</string>
    <string name="change_name">更改用户名</string>
    <string name="change_password">更改密码</string>
    <string name="change_push">消息推送</string>
    <string name="exit">注 销</string>
    <string name="username_">用户名：</string>
    <string name="change_">更改：</string>
    <string name="change">修改</string>
    <string name="changing">正在修改</string>
    <string name="changed">修改成功</string>
    <string name="regex_name">最多8个字符</string>
    <string name="err_change_password">原始密码有误\n请重新输入</string>
    <string name="user_">账号：</string>
    <string name="pass_">密码：</string>
    <string name="register_user_">账                 号：</string>
    <string name="register_pass_">密                 码：</string>
    <string name="register_confim_pass_">确认密码：</string>
    <string name="nickname_">昵                 称：</string>
    <string name="login_please">点击这里登录</string>
    <string name="floor_">楼</string>
    <string name="buffering">正在缓冲</string>
    <string name="no_preview">暂无预览</string>
    <string name="commented">评论成功</string>
    <string name="share_to">分享到</string>
    <string name="share_wechat">朋友</string>
    <string name="share_moment">朋友圈</string>
    <string name="share_weibo">微博</string>
    <string name="share_qq">好友</string>
    <string name="video_url_">播放链接：</string>
    <string name="video_url">优酷链接</string>
    <string name="video_url_err">视频地址不正确</string>
    <string name="video_source">视频来源</string>
    <string name="web_video">优酷\n视频</string>
    <string name="not_login">您尚未登录，不能进行此筛选</string>
    <string name="new_update">发现新版本</string>
    <string name="update_now">是否现在更新？</string>
    <string name="cannot_vote">投票开始时间为8月15日</string>
    <string name="undone">各位小伙伴们可以通过暑期社会实践活动平台，上传你的暑期作品（学习生活、旅游见闻等等），优秀及有趣的作品将被教师审核并推荐至排行榜，你可以为同伴的作品点赞并投票，暑期结束后，我们将为获奖者提供奖品，期待你的参加！（作品投票以及排行榜公示将于8月15日开放）</string>
    <string name="no_comment">暂时还没有评论</string>
    <string name="teacher_cannot_post">只有学生才能发帖</string>
    <string name="invaluable">不可用</string>
    <string name="btn_checked">审核通过</string>
    <string name="btn_unchecked">谢谢参与</string>
    <string name="visible_level">选择发布区域</string>
    <string name="visible_level_please">请选择发布区域</string>
    <string name="sharing">正在准备分享内容</string>
    <string name="shared">分享成功</string>
    <string name="share_err">分享失败</string>
    <string name="token_err">登录超时，请重新登录</string>

    <string-array name="filter_method">
        <item>全部作品</item>
        <item>本校作品</item>
        <item>本班作品</item>
    </string-array>
    <string-array name="visible_level">
        <item>全部可见("符合参赛要求"且"质量达四星以上")</item>
        <item>本校可见("符合参赛要求"且"质量达三星")</item>
        <item>本班可见("基本符合参赛条件"且"质量达二星")</item>
    </string-array>
    <string-array name="video_source">
        <item>优酷链接</item>
        <item>相册</item>
    </string-array>

    <string name="dialog_uploading">正在上传…</string>
    <string name="dialog_video">粘贴视频地址</string>
    <string name="dialog_video_replace">替换视频地址</string>
    <string name="dialog_video_replace_desc">将会替换已有视频</string>
    <string name="dialog_video_desc">请粘贴优酷的视频链接\n即浏览器上方地址栏中的链接</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_exit">确认退出</string>
    <string name="dialog_exit_desc">你还没有提交，确定退出编辑？</string>
    <string name="dialog_confirm">请确认</string>
    <string name="dialog_unchecked">是否取消该作品参赛资格</string>
    <string name="dialog_switch_user">切换用户</string>
    <string name="dialog_switch_user_desc">当前用户不是学生，不能发帖。是否切换到其他用户？</string>

    <string name="err_login">用户名或密码错误</string>
    <string name="err_name">名字不能为空</string>
    <string name="err_pass_null">密码不能为空</string>
    <string name="err_pass_short">密码至少需要6个字符</string>
    <string name="err_pass_match">两次输入的密码不相同</string>

    <string name="activity_settings">设置</string>
    <string name="activity_upload">上传作品</string>
    <string name="activity_myUpload">我的作品</string>
    <string name="activity_myUpload_teacher">学生作品</string>
    <string name="activity_expert">专家审核</string>
    <string name="activity_expert_score">分</string>
    <string name="activity_message">消息</string>
    <string name="activity_joined">我参与的</string>
    <string name="activity_detail">作品详情</string>
    <string name="activity_category">作品列表</string>
    <string name="activity_search">搜索</string>
    <string name="activity_filter">筛选</string>
    <string name="activity_notice_list">公告</string>
    <string name="activity_notice">公告详情</string>
    <string name="activity_video">视频</string>

    <string name="tag_reply">评</string>
    <string name="tag_vote">票</string>
    <string name="tag_praise">赞</string>
    <string name="tag_check">审</string>
    <string name="tag_waitCheck">待审核</string>

    <string name="tab_showcase">作品展示</string>
    <string name="tab_rank">排行榜</string>

    <string name="action_make_post">上传作品</string>
    <string name="action_share">分享</string>
    <string name="action_post">发表</string>
    <string name="action_search">搜索</string>
    <string name="action_done">完成</string>
    <string name="action_filter">筛选</string>

    <string name="hint_content_2">在此输入文本内容</string>
    <string name="hint_user">账号</string>
    <string name="hint_pass">密码</string>
    <string name="hint_input">请输入</string>
    <string name="hint_title">添加标题</string>
    <string name="hint_category">选择栏目</string>
    <string name="hint_content">输入内容</string>
    <string name="hint_new_name">新用户名</string>
    <string name="hint_password_old">请输入原密码</string>
    <string name="hint_password_new">请输入新密码</string>
    <string name="hint_password_confirm">请确认新密码</string>

    <string name="toast_file_err">文件错误，该文件可能不存在于本机</string>
    <string name="toast_content_empty">你还没有写任何东西</string>
    <string name="toast_err_title">标题不能为空</string>
    <string name="toast_err_cate">请选择栏目</string>
    <string name="toast_err_content">请输入内容</string>
    <string name="toast_uploaded">发表成功</string>
    <string name="toast_checked">审核成功</string>
    <string name="toast_file_not_support">格式错误，该文件不能上传</string>
    <string name="toast_err_video">视频文件地址错误</string>
    <string name="toast_score_null">请输入分数</string>
    <string name="toast_playScore_success">评分成功</string>
    <string name="toast_different_password">密码不一样</string>
    <string name="toast_registr_username">用户名不能为空</string>
    <string name="toast_registr_nickname">昵称不能为空</string>
    <string name="toast_registr_password">密码不能为空</string>
    <string name="toast_register_passwordLength">密码要不能少于6位</string>
    <string name="toast_register_success">注册成功，已登录</string>

    <string name="test_user">测试学生</string>
    <string name="test1">9月29日正式开发区级朗读排行榜，敬请期待。</string>
    <string name="test_title">暑假三日游</string>
    <string name="test_content">撑着油纸伞，独自彷徨在悠长，悠长的雨巷</string>
    <string name="test_comment">写得不错继续加油，写得不错继续加油，写得不错继续加油，写得不错继续加油，写得不错继续加油，</string>
    <string name="test_content_long">……撑着油纸伞，独自彷徨在悠长，悠长又寂寥的雨巷，我希望逢着，一个丁香一样的结着愁怨的姑娘。</string>
    <string name="test_long">雨巷雨巷雨巷雨巷雨巷雨巷雨巷雨巷雨巷雨巷</string>
    <string name="test_user_info">戴望舒 闵行区梅陇中学 六(2)班</string>
    <string name="test_school_class">闵行区梅陇中学 六(2)班</string>
    <string name="test_date">2015/09/25</string>
    <string name="test_cate">暑期安全</string>
    <string name="test_filter_all">全部作品</string>
    <string name="test_number">286</string>
    <string name="test_number_rank">1</string>
    <string name="test_number_vote">22256</string>
    <string name="test_floor_date">1楼 2015/07/20</string>
    <string name="test_vote_count">156票</string>
    <string name="test_video_url">http://v.youku.com/v_show/id_XMTI5NjQzOTI0NA==_ev_2.html</string>
</resources>
