<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/fragment_login_etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user" />

    <EditText
        android:id="@+id/fragment_login_etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <CheckBox
            android:id="@+id/fragment_login_rbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_pwd" />

        <View
            android:layout_width="0px"
            android:layout_height="0px"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/fragment_login_rbAutoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_login" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_login_btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
</LinearLayout>