<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="64dp"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/item_message_tvTag"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_rect_reply"
        android:gravity="center"
        android:text="@string/tag_reply"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_message_tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user"
                android:textColor="@color/msg_user"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_message_tvAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replied"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_message_tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="7"
                android:text="@string/test_title"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_message_tvActionDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voted"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_message_tvPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:singleLine="true"
            android:text="@string/test_content"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_message_tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:text="@string/test_date"
            android:textColor="@color/textColorDate"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>