<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="264dp"
    android:layout_height="223dp"
    android:background="@drawable/shape_card"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_name_tvOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_user"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/change_"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/dialog_name_etNew"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape_et_dialog"
            android:hint="@string/hint_new_name"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/regex_name"
        android:textColor="@color/textColorDate" />

    <TextView
        android:id="@+id/dialog_name_tvChange"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/selector_btn_dialog"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@android:color/white" />
</LinearLayout>