<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/head_detail_tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_long"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_detail_imgHead"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/default_content_description"
            android:src="@color/test"
            app:border_color="@android:color/white"
            app:border_width="0px" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/head_detail_tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user"
                android:textColor="@color/textColorSecondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/head_detail_tvFloorDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/test_floor_date"
                android:textColor="@color/textColorDate" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/head_detail_tvTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="6dp"
        android:text="@string/test_content_long"
        android:textColor="@color/textColorContentDetail"
        android:textSize="16sp" />
</LinearLayout>