<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:divider="?android:listDivider"
    android:orientation="vertical"
    android:showDividers="middle">

    <TextView
        android:id="@+id/dialog_media_tvPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/picture" />

    <TextView
        android:id="@+id/dialog_media_tvRecorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/audio" />

    <TextView
        android:id="@+id/dialog_media_tvVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/video" />
</LinearLayout>