<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_comment_imgHead"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/default_content_description"
            android:src="@color/test2"
            app:border_width="0px" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/item_comment_tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user"
                android:textColor="@color/textColorSecondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_comment_tvFloorDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/test_floor_date"
                android:textColor="@color/textColorDate" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/item_comment_tvComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/test_comment"
        android:textColor="@color/textColorSecondary" />

    <LinearLayout
        android:id="@+id/item_comment_lnAttaches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
</LinearLayout>