<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="264dp"
    android:layout_height="304dp"
    android:background="@drawable/shape_card"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="12dp">

    <LinearLayout
        android:id="@+id/dialog_password_lnErr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="-16dp"
            android:src="@mipmap/bot_off"
            android:tint="@color/dot_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/err_change_password"
            android:textColor="@color/dot_red"
            android:textSize="12sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_password_etOld"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_et_dialog"
        android:hint="@string/hint_password_old"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/dialog_password_etNew"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_et_dialog"
        android:hint="@string/hint_password_new"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/dialog_password_etConfirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_et_dialog"
        android:hint="@string/hint_password_confirm"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/dialog_password_tvChange"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/selector_btn_dialog"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@android:color/white" />
</LinearLayout>