<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">

    <FrameLayout
        android:id="@+id/head_filter_flLeft"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:background="@drawable/shape_filter_left"
        android:clickable="true"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/head_filter_tvLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/test_filter_all"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="10dp"
            android:layout_gravity="right|center_vertical"
            android:contentDescription="@string/default_content_description"
            android:src="@color/test" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/head_filter_flRight"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:background="@drawable/shape_filter_right"
        android:clickable="true"
        android:elevation="2dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/head_filter_tvRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_default"
            android:textColor="@color/blue" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="10dp"
            android:layout_gravity="right|center_vertical"
            android:contentDescription="@string/default_content_description"
            android:src="@color/test" />
    </FrameLayout>
</LinearLayout>